# cloning-demo

./: .gitignore  README.md  app.py  config.py  docker-compose.yml  env.example  flake.nix  init_db.py  pyproject.toml  seed_mock_data.py
agents/: __init__.py  analyse_handoff_agent.py  base_agent.py  classify_step_agent.py  guardrail_agent.py  intent_agent.py  models.py  orchestrator_agent.py  predict_requirement_agent.py  profile_agent.py  sales_agent.py  summary_agent.py  up_sales_cross_sales_agent.py
database/: __init__.py  catalog_adapter.py  connection.py  debug.py
database/milvus/: __init__.py  client.py  models.py  schema.py
database/postgres/: __init__.py  client.py  models.py  schema.py  session_service.py
database/redis/: __init__.py  client.py  models.py  schema.py
tests/: test_agents.py  test_database.py
workflow/: __init__.py  debug.py  memory_manager.py  orchestrator.py
